--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
-SECRET_REST_URL='https://secret-2--lcd--full.datahub.figment.io/apikey/cf67c8824b1df98cd468abf7efcf3be2/'
-SECRET_RPC_URL='https://secret-2--rpc--full.datahub.figment.io/apikey/cf67c8824b1df98cd468abf7efcf3be2/'
+SECRET_REST_URL='secret'
+SECRET_RPC_URL='secret'
 SECRET_CHAIN_ID='secret-2'
 
 MNEMONIC='mnemonics'
